--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ seaborn = "^0.11.1"
 tqdm = "^4.56.0"
 wfdb = "^3.2.0"
 torchinfo = "^1.4.4"
+PyYAML = "^5.4.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
