--- a/experiment_management/config/model/model01/config01.yml
+++ b/experiment_management/config/model/model01/config01.yml
@@ -1,5 +1,5 @@
 # trainer
-max_epochs: 3
+max_epochs: 1
 seed: 1234
 learning_rate: 0.001
 
@@ -18,3 +18,5 @@ log_error: error.log
 # mlflow
 experiment_name: experiment1
 tracking_uri: logs/mlruns
+run_name: test
+user: vscode
