--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,9 @@ tqdm = "^4.56.0"
 wfdb = "^3.2.0"
 torchinfo = "^1.4.4"
 PyYAML = "^5.4.1"
+SimpleITK = "^2.0.2"
+diskcache = "^5.2.1"
+cassandra-driver = "^3.24.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
