feat: dcgan追加(結果未確認)

--- a/gan/config/config.yml
+++ b/gan/config/config.yml
@@ -1,22 +1,25 @@
+# GAN
+image_size: 64
+z_dim: 20
+learning_rate: 0.0001
+b1: 0
+b2: 0.9
+
 # trainer
-max_epochs: 1
+max_epochs: 2
 seed: 1234
-learning_rate: 0.001
 
 # data
 project_dir: /workspaces/load_to_goal/GitHub/pytorch-implementation/
-train_dir: pytorch_classification/_data/train_image
-train_label_path: pytorch_classification/_data/train_label/label.pkl
-test_dir: pytorch_classification/_data/test_image
-test_label_path: pytorch_classification/_data/test_label/label.pkl
+train_dir: gan/data/img_78
 
 # logging
-log_dir: ./logs/logging_/model/model01
+log_dir: ./logs/logging_
 log_normal: log.log
 log_error: error.log
 
 # mlflow
-experiment_name: experiment1
+experiment_name: experiment
 tracking_uri: logs/mlruns
 run_name: test
 user: vscode
