--- a/.gitignore
+++ b/.gitignore
@@ -174,3 +174,7 @@ memo.md
 # github
 5_gan_generation/
 6_gan_anomaly_detection/
+
+# hydra
+pytorch_mlflow_hydra_optuna/outputs
+pytorch_mlflow_hydra_optuna/multiruns
