--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ SimpleITK = "^2.0.2"
 diskcache = "^5.2.1"
 cassandra-driver = "^3.24.0"
 ipyvolume = "^0.5.2"
+hydra-core = "^1.0.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
