feat: pytorch+mlflow+hydraを追加

--- a/pytorch_mlflow_hydra_optuna/config/model/model01/config.yaml
+++ b/pytorch_mlflow_hydra_optuna/config/model/model01/config.yaml
@@ -1,14 +1,15 @@
+# classifier
+learning_rate: 0.001
+
 # trainer
 max_epochs: 1
 seed: 1234
-learning_rate: 0.001
 
 # data
-project_dir: /workspaces/load_to_goal/GitHub/pytorch-implementation/
-train_dir: pytorch_classification/_data/train_image
-train_label_path: pytorch_classification/_data/train_label/label.pkl
-test_dir: pytorch_classification/_data/test_image
-test_label_path: pytorch_classification/_data/test_label/label.pkl
+train_dir: ../pytorch_classification/_data/train_image
+train_label_path: ../pytorch_classification/_data/train_label/label.pkl
+test_dir: ../pytorch_classification/_data/test_image
+test_label_path: ../pytorch_classification/_data/test_label/label.pkl
 
 # logging
 log_dir: ./logs/logging_/model/model01
