--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ diskcache = "^5.2.1"
 cassandra-driver = "^3.24.0"
 ipyvolume = "^0.5.2"
 hydra-core = "^1.0.6"
+hydra-optuna-sweeper = "^0.9.0-rc.2"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
