--- a/pytorch_mlflow_hydra_optuna/config/model/model01/config.yaml
+++ b/pytorch_mlflow_hydra_optuna/config/model/model01/config.yaml
@@ -1,8 +1,22 @@
+defaults:
+  - hydra/sweeper: optuna
+
+hydra:
+  sweeper:
+    optuna_config:
+      direction: minimize
+      study_name: sphere
+      storage: null
+      n_trials: 5
+      n_jobs: 1
+      sampler: tpe
+      seed: 123
+
 # classifier
 learning_rate: 0.001
 
 # trainer
-max_epochs: 1
+max_epochs: 2
 seed: 1234
 
 # data
