feat: 標準化を追加

--- a/time_series_forecasting/config/model/config.yaml
+++ b/time_series_forecasting/config/model/config.yaml
@@ -9,6 +9,7 @@ seed: 1234
 data_path: ./_data/data/jena_climate_2009_2016.csv
 input_length: 24
 label_length: 24
+val_ratio: 0.2
 
 # network
 hidden_size: 30
