--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,8 @@ cassandra-driver = "^3.24.0"
 ipyvolume = "^0.5.2"
 hydra-core = "^1.0.6"
 hydra-optuna-sweeper = "^0.9.0-rc.2"
+torchviz = "^0.0.1"
+hiddenlayer = "^0.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
